# protein-mlutils

./: README.md  pyproject.toml  update_version.sh
notebook/: 1_EDA_2025_07_06.ipynb
src/proteinmlutils/: featurizer.py
